Compositing-Masks are not editable with new DepsGraph #45052

Closed
opened 2015-06-12 19:05:53 +02:00 by Philip Plescher · 5 comments

System Information
Xubuntu 15.04; GeForce GTX 780 Ti

Blender Version
Broken:2.75 RC1 (bff8b5d) with option "--enable-new-depsgraph"

Short description of error

You can create new Masks in the MovieClip- or Image-Editor, but it is impossible to move Handles/Controllpoints of the new Mask. Also Masks in existing Files are not editable.

Exact steps for others to reproduce the error

  • Open a MovieClip-Editor
  • load an Image or Movie
  • change modus to "Mask"
  • create a new Masks-Datablock
  • create new Mask-Controllpoints per Ctrl + LMB
  • try to move the new Controllpoints

Thanks for investigation!

**System Information** Xubuntu 15.04; GeForce GTX 780 Ti **Blender Version** Broken:2.75 RC1 (bff8b5d) with option "--enable-new-depsgraph" **Short description of error** You can create new Masks in the MovieClip- or Image-Editor, but it is impossible to move Handles/Controllpoints of the new Mask. Also Masks in existing Files are not editable. **Exact steps for others to reproduce the error** - Open a MovieClip-Editor - load an Image or Movie - change modus to "Mask" - create a new Masks-Datablock - create new Mask-Controllpoints per Ctrl + LMB - try to move the new Controllpoints Thanks for investigation!

Changed status to: 'Open'

Changed status to: 'Open'

Added subscriber: @qpblendpolis

Added subscriber: @qpblendpolis
Sergey Sharybin was assigned by Bastien Montagne 2015-06-13 07:00:34 +02:00

This issue was referenced by d7cd8ff891

This issue was referenced by d7cd8ff891349b81e17cda0a94a9974db10191b2

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

This issue was referenced by 626a78607c

This issue was referenced by 626a78607cf4ae574ee9a60821527cd9554d1c28
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#45052
No description provided.