source/blender/blenkernel/intern/scene.c
@@ -1730,15 +1730,16 @@ void BKE_scene_update_tagged(EvaluationContext *eval_ctx, Main *bmain, Scene *sc
 	 * in the future this should handle updates for all datablocks, not
 	 * only objects and scenes. - brecht */
 #ifdef WITH_LEGACY_DEPSGRAPH
-	if (use_new_eval) {
-		DEG_evaluate_on_refresh(eval_ctx, scene->depsgraph, scene);
-	}
-	else {
+	if (!use_new_eval) {
 		scene_update_tagged_recursive(eval_ctx, bmain, scene, scene);
 	}
-#else
-	DEG_evaluate_on_refresh(eval_ctx, scene->depsgraph, scene);
+	else
 #endif
+	{
+		DEG_evaluate_on_refresh(eval_ctx, scene->depsgraph, scene);
+		/* TODO(sergey): This is to beocme a node in new depsgraph. */
+		BKE_mask_update_scene(bmain, scene);
+	}
 
 	/* update sound system animation (TODO, move to depsgraph) */
 	BKE_sound_update_scene(bmain, scene);
